# routes/api.php
@@ -50,7 +50,14 @@ Route::post('schedule','API\ScheduleController@addSchedule');
 //notification
 Route::post('pushmessage','API\MessageController@sendNotif');
 
+//report 
 Route::group(['middleware' => 'auth:api'], function(){
     Route::post('report','API\ReportController@register');
     Route::get('report', 'API\ReportController@fetch_by_farm');
+});
+
+//form
+Route::group(['middleware' => 'auth:api'], function(){
+    Route::post('form','API\FormController@addForm');
+    Route::get('form', 'API\FormController@getForm');
 });
